fix validation to be specific and add catch
